--- a/carousel.html
+++ b/carousel.html
@@ -9,43 +9,48 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 <style>
-  .test{
-   
-    width: 200px;
-    height: 100px;  
-  }
-  .bg-gradient{
-    background-image: var(--bs-gradient);
+    .test {
 
-  }
-  .rounded-circle{
-      height:300px;
-      width:300px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  }
-  .practice{
-      display: flex;
-      flex-direction: column;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: center;
-  }
-  .parent-div{
-      width:900px;
-      height:900px;
-      background-color: red;
-  }
-  .check-div{
-      width:100px;
-      height:100px;
-      background: #000;
-  }
+        width: 200px;
+        height: 100px;
+    }
+
+    .bg-gradient {
+        background-image: var(--bs-gradient);
+
+    }
+
+    .rounded-circle {
+        height: 300px;
+        width: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .practice {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .parent-div {
+        width: 900px;
+        height: 900px;
+        background-color: red;
+    }
+
+    .check-div {
+        width: 100px;
+        height: 100px;
+        background: #000;
+    }
 </style>
 
 <body>
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleSlidesOnly" class="carousel slide w-50" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active ">
                 <img src="./img/women1.jpg" class="d-block w-100" alt="...">
@@ -78,29 +83,29 @@
         <div class="p-2 bd-highlight">Flex item 1</div>
         <div class="p-2 bd-highlight">Flex item 2</div>
         <div class="p-2 bd-highlight">Flex item 3</div>
-      </div>
-      <div class="d-flex flex-column-reverse align-items-center">
+    </div>
+    <div class="d-flex flex-column-reverse align-items-center">
         <div class="p-2 bd-highlight">Flex item 1</div>
         <div class="p-2 bd-highlight">Flex item 2</div>
         <div class="p-2 bd-highlight">Flex item 3</div>
-      </div>
+    </div>
 
-      <p class="user-select-all">This paragraph will be entirely selected when clicked by the user.</p>
-<p class="user-select-auto">This paragraph has default select behavior.</p>
-<p class="user-select-none">This paragraph will not be selectable when clicked by the user.</p>
+    <p class="user-select-all">This paragraph will be entirely selected when clicked by the user.</p>
+    <p class="user-select-auto">This paragraph has default select behavior.</p>
+    <p class="user-select-none">This paragraph will not be selectable when clicked by the user.</p>
 
-<div class="position-relative parent-div">
-    <div class="position-absolute top-0 start-0 translate-middle check-div"></div>
-    <div class="position-absolute top-0 start-50 translate-middle check-div"></div>
-    <div class="position-absolute top-0 start-100 translate-middle check-div"></div>
-    <div class="position-absolute top-50 start-0 translate-middle check-div"></div>
-    <div class="position-absolute top-50 start-50 translate-middle check-div"></div>
-    <div class="position-absolute top-50 start-100 translate-middle check-div "></div>
-    <div class="position-absolute top-100 start-0 translate-middle check-div"></div>
-    <div class="position-absolute top-100 start-50 translate-middle check-div"></div>
-    <div class="position-absolute top-100 start-100 translate-middle check-div"></div>
-  </div>
-     
+    <div class="position-relative parent-div">
+        <div class="position-absolute top-0 start-0 translate-middle check-div"></div>
+        <div class="position-absolute top-0 start-50 translate-middle check-div"></div>
+        <div class="position-absolute top-0 start-100 translate-middle check-div"></div>
+        <div class="position-absolute top-50 start-0 translate-middle check-div"></div>
+        <div class="position-absolute top-50 start-50 translate-middle check-div"></div>
+        <div class="position-absolute top-50 start-100 translate-middle check-div "></div>
+        <div class="position-absolute top-100 start-0 translate-middle check-div"></div>
+        <div class="position-absolute top-100 start-50 translate-middle check-div"></div>
+        <div class="position-absolute top-100 start-100 translate-middle check-div"></div>
+    </div>
+
     <script src="./js/bootstrap.bundle.js"></script>
 </body>
 
